--- a/build.gradle
+++ b/build.gradle
@@ -11,6 +11,7 @@ repositories {
 
 dependencies {
     implementation 'org.projectlombok:lombok:1.18.18'
+    implementation group: 'org.apache.commons', name: 'commons-lang3', version: '3.0'
     testImplementation 'org.junit.jupiter:junit-jupiter-api:5.7.0'
     testRuntimeOnly 'org.junit.jupiter:junit-jupiter-engine:5.7.0'
     compileOnly 'org.projectlombok:lombok:1.18.20'
